--- a/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
@@ -11,6 +11,11 @@
     border: 1px solid #63a242
     margin-bottom: 10px
     border-spacing: 0px
+  .percentage-bar-text
+    position: relative
+    top: -18px
+    height: 0px
+    margin-left: 5px
   table
     width: 100%
     .dashboard-stat-icon-td
@@ -87,5 +92,13 @@
       border-right-style: inset
   .dashboard-stat-exec-tdmc
     width: 48px
+    font-size: 10px
+    text-align: right
   .container-fluid
     padding-left: 0px
+  .asset-name-column
+    vertical-align: middle
+  .execution-data-column
+    text-align: right
+  .dashboard-right-table
+    width: auto
