TM-14671 Fix issue creating a notice

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
@@ -31,10 +31,12 @@
 
                         <ng-template kendoGridFilterCellTemplate let-filter>
                             <div class="has-feedback" *ngIf="column.property && column.type !== 'action'" style="margin-bottom:0px;">
-                                <div *ngIf="column.type === 'text' && column.property !== 'typeId'">
+
+                                <div *ngIf="column.type === 'text' && column.property !== 'typeId' && column.property !== 'active'">
                                     <input type="text" (keyup)="onFilter(column)" class="form-control" name="{{column.property}}" [(ngModel)]="column.filter" placeholder="Filter {{column.label}}" value="">
                                     <span *ngIf="column.filter" (click)="clearValue(column)" style="cursor:pointer;color:#656565;pointer-events:all" class="fa fa-times form-control-feedback" aria-hidden="true"></span>
                                 </div>
+
                                 <div *ngIf="column.property === 'typeId'">
                                     <kendo-dropdownlist
                                         [data]="noticeTypes"
@@ -42,11 +44,29 @@
                                         [valueField]="'typeId'"
                                         [valuePrimitive]="true"
                                         [(ngModel)]="column.filter"
+                                        [defaultItem]="defaultNoticeType"
                                         (valueChange)="onFilter(column)"
                                         class="form-control">
                                     </kendo-dropdownlist>
-                                    <span *ngIf="column.filter" (click)="clearValue(column)" style="cursor:pointer;color:#656565;pointer-events:all;margin-right: 15px;" class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+                                    <span *ngIf="column.filter" (click)="resetTypeFilter(column)" style="cursor:pointer;color:#656565;pointer-events:all;margin-right: 15px;" class="fa fa-times form-control-feedback" aria-hidden="true"></span>
                                 </div>
+
+
+                                <div *ngIf="column.property === 'active'">
+                                    <kendo-dropdownlist
+                                        [data]="yesNoList"
+                                        [textField]="'name'"
+                                        [valueField]="'value'"
+                                        [valuePrimitive]="true"
+                                        [(ngModel)]="column.filter"
+                                        [defaultItem]="defaultYesNoList"
+                                        (valueChange)="onFilter(column)"
+                                        class="form-control">
+                                    </kendo-dropdownlist>
+                                    {{column.filter | json}}
+                                    <span *ngIf="column.filter == true || column.filter == false" (click)="resetTypeFilter(column)" style="cursor:pointer;color:#656565;pointer-events:all;margin-right: 15px;" class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+                                </div>
+
                             </div>
                         </ng-template>
 
@@ -58,7 +78,11 @@
                         </ng-template>
 
                         <ng-template kendoGridCellTemplate *ngIf="column.property === 'typeId'" let-dataItem>
-                            {{((dataItem.typeId === 1 )? 'Prelogin' : 'Postlogin')}}
+                            {{((dataItem.typeId === PRE_LOGIN)? noticeTypes[0].name : noticeTypes[1].name)}}
+                        </ng-template>
+
+                        <ng-template kendoGridCellTemplate *ngIf="column.property === 'active'" let-dataItem>
+                            {{((dataItem.active)? 'Yes': 'No')}}
                         </ng-template>
 
                     </kendo-grid-column>
