TM-14762 Fix issue displaying the border for the slider control

--- a/src/main/webapp/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
+++ b/src/main/webapp/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
@@ -49,15 +49,13 @@
       .k-switch-background
         background: unset
     .k-switch-container
-      border: 0
+      border-width: 1px
       background-color: unset
-      border-radius: unset
-      outline: 0
-      box-shadow: none
       border-color: rgba(0, 0, 0, 0.17)
       height: 22px
       padding-top: 3px
       .k-switch-handle
+        top: -2px
         left: unset
         margin: 0 2px 0 2px
         border-radius: 50%
