--- a/src/main/webapp/tds/web-app/css/base/taskstatus.sass
+++ b/src/main/webapp/tds/web-app/css/base/taskstatus.sass
@@ -1,4 +1,4 @@
-@import 'taskstatus-mixins.sass';
+@import 'taskstatus-mixins.sass'
 
 .task-hold
   @include task-hold
@@ -14,6 +14,7 @@
 
 .task-ready
   @include task-ready
+
 .task-ready:hover
   @include task-ready
 
