TM-13175 - Context menu changes in the meantime, produces errors when trying to open.

--- a/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
@@ -61,13 +61,15 @@
                             </div>
                         </ng-template>
                         <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
-                            <span #optionsButton *ngIf="column.property=='action'">more</span>
-                            <kendo-contextmenu [target]="optionsButton" [items]="items">
-                            </kendo-contextmenu>
+                            <div class="optionsButton" *ngIf="column.property=='action'">
+                                <span>more</span>
+                            </div>
                             <span *ngIf="column.property!='action'">{{dataItem[column.property]}}</span>
                         </ng-template>
                     </kendo-grid-column>
                 </kendo-grid>
+                <kendo-contextmenu [target]="taskGrid" filter=".optionsButton" [items]="items">
+                </kendo-contextmenu>
                 <span>{{summaryDetail}}</span>
             </div>
             <div class="col-md-6 cell-container">
