--- a/src/main/webapp/tds/web-app/css/tds-style.sass
+++ b/src/main/webapp/tds/web-app/css/tds-style.sass
@@ -33,6 +33,7 @@
 @import "shared/components/datetime-control.component"
 @import "shared/components/header.component"
 @import "shared/components/password-change.component"
+@import "shared/components/supports-depends.component"
 @import "shared/components/number-control.component"
 @import "shared/components/action-button.component"
 @import "shared/components/bulk-change-counter"
