--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -49,3 +49,4 @@
 @import "module/reports/pre-event-checklist.component"
 @import "module/reports/task-report.component"
 @import "module/reports/server-conflicts-report.component"
+@import "module/reports/application-event-results-report.component"
