TM-13097, TM-14901, TM-14918, TM-14859 - Report style changes and added correct filename to generated task report xls.

--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-event-results-report.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-event-results-report.component.sass
@@ -1,5 +1,6 @@
 tds-application-event-results-report
-  .form-group
+  .form-group.input
+    margin-bottom: 5px
     label
       padding-left: 5px
       padding-right: 5px
