--- a/src/main/webapp/tds/web-app/css/page/module/reports/task-report.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/task-report.component.sass
@@ -1,10 +1,10 @@
 tds-task-report
   .form-group.checkboxes
+    margin-bottom: 0px
     label
       margin-right: 20px
   .form-group
     .buttons
-      text-align: right
       tds-button-custom
         margin-right: 10px
   .event-multiselect
