TM-13133 add style to the main container application report

--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -1,7 +1,5 @@
 .application-conflicts
-  margin-left: 15px
-  margin-top: 10px
-  widht: 100%
+  padding: 0 30px
   .field-error
     color: red
   .application-container
@@ -49,7 +47,7 @@
     display: flex
     justify-content: center
     align-items: center
-    margin-top: 10px
+    margin-bottom: 20px
     .section-title
       width: 35%
     .section-control
