Add report toggle control

--- a/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
@@ -1,3 +1,4 @@
+<tds-report-toggle-filters [hideFilters]="isDisplayingReport" (toggle)="toggleFilters($event)"></tds-report-toggle-filters>
 <div class="box-body">
 	<div class="box box-primary">
 		<div class="box-header"></div>
